# bat-dong-san-pd

./: README.md
backend/: POETRY_COMMANDS.md  README.md  pyproject.toml  real_estate_data.csv  requirements.txt  start-dev.sh  start.sh
backend/crawler/: QUICKSTART.md  README.md  __init__.py  index.py  run_crawler.py  start_browserless.sh  test_crawler.py
backend/src/: app.py  train_model.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx
