[tool.poetry]
name = "bat-dong-san-backend"
version = "0.1.0"
description = "Backend API cho dự đoán giá bất động sản sử dụng Machine Learning"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}, {include = "crawler"}]

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
scikit-learn = "^1.3.2"
xgboost = "^2.0.1"
pandas = "^2.1.3"
joblib = "^1.3.2"
numpy = "^1.24.3"
pydantic = "^2.5.0"
pyppeteer = "^1.0.2"
aiohttp = "^3.9.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[tool.poetry.scripts]
start = "uvicorn app:app --host 0.0.0.0 --port 8000"
dev = "uvicorn app:app --host 0.0.0.0 --port 8000 --reload"
train = "src.train_model:main"
crawler = "crawler.index:main"
test-crawler = "crawler.test_crawler:main"
crawler-run = "crawler.run_crawler:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
